--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,7 @@
 <ngx-loading-bar [includeSpinner]="false" height="10px"></ngx-loading-bar>
+<!-- Check if auth completed -->
+<app-login></app-login>
+<!-- 
 <app-header></app-header>
 <router-outlet></router-outlet>
-<app-footer><app-footer>
+<app-footer><app-footer> -->
