--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,3 +1,30 @@
-<p>
-  login works!
-</p>
+<div class="container-fluid">
+	<div class="row align-items-center h-100">
+		<div class="col-xl-2 mx-auto">
+            <div class="container-fluid">	
+				<div class="row">
+					<div class="col-xl-12">
+						<h1>Login</h1>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="container-fluid">
+				<form>
+					<div class="row">
+						<div class="col-xl-12">
+							<input type="text" placeholder="Usuario">
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-xl-12">
+							<input type="password" placeholder="Contraseña">
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+</div>
